# pds-drone-interface

./: CMakeLists.txt  README.md  compile.sh  compile_debug.sh
config/: config.cfg.TEMPLATE
lib/: CMakeLists.txt
lib/mavlink/: CMakeLists.txt
src/: Main.cpp
src/channels/: channels.cpp  channels.h
src/config/: ConfigParams.h  config_parser.cpp
src/drone/: Drone.cpp  Drone.h  DroneManualCommand.h
src/network/: Com_Mavlink.cpp  Com_Mavlink.h  Com_Serial.cpp  Com_Serial.h  Com_Wifi.h
src/threads/: Abstract_ThreadClass.cpp  DroneReceiver_ThreadClass.cpp  DroneReceiver_ThreadClass.h  DroneSender_ThreadClass.cpp  DroneSender_ThreadClass.h  ImageReceiver_ThreadClass.cpp  ImageReceiver_ThreadClass.h  NoOp_ThreadClass.h
